[workspace]
members = [
    "crates/bevy_color",
]

[package]
name = "bevy_quill"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A reactive UI framework for Bevy"
homepage = "https://github.com/viridia/quill"
repository = "https://github.com/viridia/quill"
readme = "README.md"
keywords = ["bevy", "game", "gui"]
categories = ["gui", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_mod_picking = "0.17.0"
impl-trait-for-tuples = "0.2.2"
static_init = "1.0.3"
winnow = "0.5.19"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
